# water_demand_forecasting

./: HISTORY.rst  LICENSE  README.rst  lstm.ipynb  mypy.ini  pyproject.toml  setup.py  tox.ini
docs/: Makefile  index.rst  make.bat
notebooks/: Global_model.ipynb  TCN.ipynb  lstm.ipynb
tests/: __init__.py
water_demand_forecasting/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  __init__.py  callbacks.py  config.yml  custom_plots.py  data_preprocessing.py  local_config.yml  plots.py  pyproject.toml  setup.cfg  setup.py  water_demand_forecasting multimodel.py  water_demand_forecasting.py  wdf_model.py
water_demand_forecasting/.github/: ISSUE_TEMPLATE.md
water_demand_forecasting/config_files/: load_config_file.py
water_demand_forecasting/docs/: conf.py  installation.rst  usage.rst
water_demand_forecasting/notebooks/: lstm.ipynb
water_demand_forecasting/tests/: test_water_demand_forecasting.py
water_demand_forecasting/water_demand_forecasting/: __init__.py  cli.py  data_preprocessing.py  water_demand_forecasting.py
