[tool.poetry]
name = "water_demand_forecasting"
version = "0.0.1"
description = "Water demand forecasting"
authors = ["Diego Corredor"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.24.0"
pyyaml = "^5.3.1"
click = "^7.1.2"
sklearn = "^0.0"
lint = "^1.2.1"
numpy = "^1.19.5"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
pydocstyle = "^4.0"
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.5.3"

[tool.poetry.scripts]
water_demand_forecasting = "water_demand_forecasting.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.deephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
