[tool.poetry]
name = "water_demand_forecasting"
version = "0.0.1"
description = "Water demand forecasting"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.24.0"
pyyaml = "^5.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
pydocstyle = "^4.0"
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.5.3"

[tool.poetry.scripts]
build_portfolio = "name = "water_demand_forecasting.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
